# precision-oncology-ml-sandbox

precision-oncology-ml-sandbox/: Dockerfile  Makefile  README.md  pyproject.toml
precision-oncology-ml-sandbox/configs/: config.yaml
precision-oncology-ml-sandbox/configs/genomics/: default.yaml
precision-oncology-ml-sandbox/configs/imaging/: default.yaml
precision-oncology-ml-sandbox/configs/nlp/: default.yaml
precision-oncology-ml-sandbox/configs/rl/: default.yaml
precision-oncology-ml-sandbox/notebooks/: README.md
precision-oncology-ml-sandbox/src/pon_ml/: __init__.py  registry.py  seeds.py  tracking.py
precision-oncology-ml-sandbox/src/pon_ml/data/: gen_ehr.py  gen_genomics.py  gen_imaging.py  gen_nlp.py
precision-oncology-ml-sandbox/src/pon_ml/genomics/: train.py
precision-oncology-ml-sandbox/src/pon_ml/imaging/: train.py
precision-oncology-ml-sandbox/src/pon_ml/nlp/: bm25.py  rag.py
precision-oncology-ml-sandbox/src/pon_ml/rl/: env.py  train.py
precision-oncology-ml-sandbox/tests/: test_data_gen.py  test_genomics_split.py  test_nlp_rag.py  test_rl_env.py
